# Gen-AI-Virtual-Try-On-Clothes

./: .gitignore  CHANGELOG.md  README.md  RENDER_DEPLOYMENT.md  build.sh  deploy.bat  deploy.sh  package.json
backend/: DEPLOYMENT.md  Procfile  build-frontend.sh  build.bat  build.sh  main.py  pyproject.toml  render.yaml  requirements-mediapipe.txt  requirements.txt  setup.py  simple_server.py  start_server.py
backend/routers/: tryon.py
backend/utils/: enhanced_tryon.py  virtual_tryon.py
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  config.js  index.css
frontend/src/components/: Footer.jsx  ImageUpload.jsx
frontend/src/components/ui/: button.jsx
