[project]
name = "ai-virtual-try-on-clothes"
version = "0.1.0"
description = ""
authors = [
    {name = "Narender Keswani",email = "narender.rk10@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8,<3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "google-genai (>=1.11.0,<2.0.0)",
    "opencv-python (>=4.8.0)",
    "Pillow (>=10.0.0)",
    "numpy (>=1.24.0)",
    "requests (>=2.31.0)",
    "rembg (>=2.0.0)",
    "scikit-image (>=0.21.0)",
    "scipy (>=1.11.0)"
]

[project.optional-dependencies]
mediapipe = ["mediapipe (>=0.10.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

